--- a/Lesson_3_Utkin/app/src/main/res/values/strings.xml
+++ b/Lesson_3_Utkin/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Lesson_3_Utkin</string>
     <string name="constraint_layout">Constraint layout</string>
     <string name="usual_layout">Usual layout</string>
+    <string name="icon_of_user_account">Icon of user account</string>
+    <string name="private_data">Личные данные</string>
+    <string name="name">Имя</string>
+    <string name="surname">Фамилия</string>
+    <string name="email">E-mail</string>
+    <string name="login">Логин</string>
+    <string name="your_region">Ваш регион</string>
+    <string name="log_out">Выйти из аккаунта</string>
 </resources>
